
syntax = "proto3";

import "epsilon/expression.proto";

// Problem represented in generic form
message Problem {
  Expression objective = 1;
  repeated Constraint constraint = 2;
}

message Constraint {
  string constraint_id = 1;
  Cone cone = 2;
  repeated Expression arg = 3;
}
